--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/images/icons/resume.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta name="description" content="A simple and minimalistic resume template." />
-        <meta name="author" content="Ryan Balieiro" />
+        <meta name="description" content="CV virtuel de Nicolas Blier." />
+        <meta name="author" content="Nicolas Blier" />
         <meta name="format-detection" content="address=no"/>
         <title>Resume Template – Vue 3 + Bootstrap 5</title>
 
