--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/images/icons/resume.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta name="description" content="CV virtuel de Nicolas Blier." />
+        <meta name="description" content="Salut, voici mon cv virtuel." />
         <meta name="author" content="Nicolas Blier" />
         <meta name="format-detection" content="address=no"/>
-        <title>Resume Template – Vue 3 + Bootstrap 5</title>
+        <title>CV virtuel de Nicolas Blier</title>
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Saira:400,700" rel="stylesheet" type="text/css">
